[package]
name = "crawlrs"
version = "0.1.0"
authors = ["Kyle Nickel <nickelkr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
